--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Space</title>
+        <title>World View</title>
         <!-- Jquery !-->
         <script
           src="https://code.jquery.com/jquery-3.2.1.js"
