Fixed/Updated UI.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div class="row">
-            <div class="col-md-2"></div>
+            <div class="col-md-1"></div>
             <div class="col-md-8">
                 <h2 id="status">Waiting...</h2>
                 <p id="message"></p>
@@ -29,7 +29,10 @@
                 </div>
                 <div id="images">
                 </div>
-                <div id="selector"></div>
+                <div class="options">
+                    <div id="selector"></div>
+                    <p>LANDSAT image taken on:</p><span id="date"></span></p>
+                </div>
             </div>
         </div>
     </body>
